# ardour-meta

./: .gitignore  Makefile  README.md  pyproject.toml
ardour_meta/: __main__.py  models.py
ardour_meta/cli/: editor.py  main.py
ardour_meta/cli/actions/: range.py  region.py
lua_scripts/: ardour-meta.lua
